Bug 502895 - Space is absent between two sentences in hang notification
Summary: Space is absent between two sentences in hang notification
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-16 20:45 UTC by Mr Roke Julian Lockhart Beedell
Modified: 2025-04-18 15:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
A Screenshot (25.92 KB, image/png)
2025-04-16 20:45 UTC, Mr Roke Julian Lockhart Beedell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mr Roke Julian Lockhart Beedell 2025-04-16 20:45:39 UTC
Created attachment 180327 [details]
A Screenshot

SUMMARY

When an application's window procedure is unresponsive, Plasma Shell's notification service explains this to the user via a notification, whose label is missing a space.

STEPS TO REPRODUCE

1. Send a STOP to a process with an attached (top-level) window.
2. Send a SIGTERM to it.

OBSERVED RESULT

Undermentioned is, verbatim, what the notification states:

> "Welcome" of KWrite is not responding. Do you want to terminate this application?Terminating this application will close all of its windows. Any unsaved data will be lost.

EXPECTED RESULT

It should be:

> "Welcome" of KWrite is not responding. Do you want to terminate this application? Terminating this application will close all of its windows. Any unsaved data will be lost.

SOFTWARE/OS VERSIONS

> Operating System: Fedora Linux 42  
> KDE Plasma Version: 6.3.4  
> KDE Frameworks Version: 6.13.0  
> Qt Version: 6.8.2  
> Kernel Version: 6.14.2-300.fc42.x86_64 (64-bit)  
> Graphics Platform: Wayland

ADDITIONAL INFORMATION

I've searched https://invent.kde.org/search?search=terminating%20this%20application&nav_source=navbar for this string, but I presume that it's stored in a translation file that is consumed, rather than directly embedded as a QString. Otherwise, I'd have remediated this myself with a PR.
Comment 1 Mr Roke Julian Lockhart Beedell 2025-04-16 21:08:53 UTC
https://reddit.com/r/kde/comments/1024y46/comment/j2rxukw disincentivised me from remediating this alone.
Comment 2 Nate Graham 2025-04-17 15:30:20 UTC
It's a code bug, not a translation bug. See https://invent.kde.org/plasma/kwin/-/blob/master/src/helpers/killer/killer.cpp?ref_type=heads#L236

Feel free to submit a PR!
Comment 3 Mr Roke Julian Lockhart Beedell 2025-04-17 15:52:12 UTC
(In reply to Nate Graham from comment #2)  
...Actually, I think you'd rather I don't, 'cause I didn't consider it might be CPP code. 😅 Apologies! I can change a string, but I can't write C.
Comment 4 Nate Graham 2025-04-17 15:53:26 UTC
You don't need to write code; just change the string to add a space.
Comment 5 Mr Roke Julian Lockhart Beedell 2025-04-17 16:07:52 UTC
(In reply to Nate Graham from comment #4)
Thanks! I tried: https://invent.kde.org/plasma/kwin/-/merge_requests/7528. I hope this doesn't cost you more time it would have taken to just add a space yourself! :D
Comment 6 Vlad Zahorodnii 2025-04-18 10:38:05 UTC
Git commit 523ae7cc0d21b7c23bc1f6734f27cdbc520b868c by Vlad Zahorodnii, on behalf of Roke Beedell.
Committed on 18/04/2025 at 09:51.
Pushed by vladz into branch 'master'.

helpers/killer: Fix missing space in the prompt

M  +9    -6    src/helpers/killer/killer.cpp

https://invent.kde.org/plasma/kwin/-/commit/523ae7cc0d21b7c23bc1f6734f27cdbc520b868c
Comment 7 Nate Graham 2025-04-18 15:33:09 UTC
Great job, Roke!
Comment 8 Mr Roke Julian Lockhart Beedell 2025-04-18 15:34:43 UTC
(In reply to Nate Graham from comment #7)  
Thank you... I'll thank Vlad and you!