helpers/killer: Fix missing space in the prompt

BUG: 502895